# bomberman-of-the-hill

./: .env.example  .gitignore  Cargo.toml  README.md  clippy.toml  rounds  starttest.sh  submit.sh
.github/workflows/: rust.yml
crates/bomber_game/: Cargo.toml
crates/bomber_game/assets/: rounds
crates/bomber_game/assets/graphics/PSDs/: Bomb_Animation.psd  Bomberman.psd  Bombermananimation.psd  BombermananimationBack.psd  BombermananimationFront.psd  BombermananimationSide.psd  Creep_AnimationBack.psd  Creep_AnimationFront.psd  Creep_AnimationSide.psd  Flame_Animation.psd
crates/bomber_game/assets/graphics/PSDs/__MACOSX/: ._Bomb_Animation.psd  ._Bomberman.psd  ._Bombermananimation.psd  ._BombermananimationBack.psd  ._BombermananimationFront.psd  ._BombermananimationSide.psd  ._Creep_AnimationBack.psd  ._Creep_AnimationFront.psd  ._Creep_AnimationSide.psd  ._Flame_Animation.psd
crates/bomber_game/assets/maps/: castle.txt  crate_heavy_cross_arena_small.txt  finland.txt  race.txt  shingeki_no_kyojin.txt  spiral.txt
crates/bomber_game/src/: animation.rs  audio.rs  bomb.rs  game_map.rs  game_ui.rs  hero_behaviour.rs  hero_hotswap.rs  labyrinth.rs  main.rs  object.rs  player_behaviour.rs  player_hotswap.rs  rendering.rs  score.rs  state.rs  tick.rs  victory_screen.rs
crates/bomber_lib/: Cargo.toml
crates/bomber_lib/src/: lib.rs  wasm_helpers.rs  world.rs
crates/bomber_macro/: Cargo.toml
crates/bomber_macro/src/: lib.rs  wasm_export.rs  wasm_wrap.rs
crates/bomber_plugins/cheater/: Cargo.toml
crates/bomber_plugins/cheater/src/: lib.rs
crates/bomber_plugins/fool/: Cargo.toml
crates/bomber_plugins/fool/src/: lib.rs
crates/bomber_plugins/memcheater/: Cargo.toml
crates/bomber_plugins/memcheater/src/: lib.rs
crates/bomber_plugins/pablo/: Cargo.toml
crates/bomber_plugins/pablo/src/: lib.rs  tile_utils.rs
crates/bomber_plugins/wanderer/: Cargo.toml
crates/bomber_plugins/wanderer/src/: lib.rs
crates/hero_lib/: Cargo.toml
crates/hero_lib/src/: lib.rs  wasm_helpers.rs  world.rs
crates/hero_macro/: Cargo.toml
crates/hero_macro/src/: lib.rs
crates/hero_plugin/: Cargo.toml
crates/hero_plugin/src/: lib.rs
crates/hero_plugins/fool/: Cargo.toml
crates/hero_plugins/fool/src/: lib.rs
crates/hero_plugins/wanderer/: Cargo.toml
crates/hero_plugins/wanderer/src/: lib.rs
crates/hero_runner/: Cargo.toml
crates/hero_runner/src/: hero_behaviour.rs  hero_hotswap.rs  labyrinth.rs  main.rs  rendering.rs
crates/upload_server/: Cargo.toml
crates/upload_server/src/: api_keys.rs  main.rs  upload_handler.rs
