[workspace]
resolver = "2" 
members = [
   "./crates/bomber_game",
   "./crates/bomber_lib",
   "./crates/bomber_macro",
   "./crates/bomber_plugins/wanderer",
   "./crates/bomber_plugins/fool",
   "./crates/bomber_plugins/cheater",
   "./crates/bomber_plugins/memcheater",
   "./crates/upload_server",
]
