[package]
name = "bomber_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.38"
# TODO(bschwind) - Remove the 'dynamic' feature flag before deployment of the final version.
bevy = { version = "0.7", features = ["dynamic"] }
bevy_egui = "0.14"
bevy_tweening = "0.4"
anyhow = "1"
rand = "0.8"

[dependencies.bomber_lib]
path = "../bomber_lib"

