[package]
name = "bomber_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"
serde = { version = "1", features = ["derive"] }
bincode = "1"
bomber_macro = { path = "../bomber_macro" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wasmtime = "0.38"
anyhow = "1"

