[package]
name = "fool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
lazy_static = "1"

[dependencies.bomber_lib]
git = "https://github.com/tonarino/bombercrab-player.git"

[dependencies.bomber_macro]
git = "https://github.com/tonarino/bombercrab-player.git"

[lib]
crate-type = ["cdylib"]
