[package]
name = "wanderer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
lazy_static = "1"

[dependencies.hero_lib]
path = "../../hero_lib"

[dependencies.hero_macro]
path = "../../hero_macro"

[lib]
crate-type = ["cdylib"]
